[package]
name = "spatial_table"
description = "Bi-directional association between entities and 2D grid locations"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/spatial-table.git"
repository = "https://github.com/stevebob/spatial-table.git"
documentation = "https://docs.rs/spatial_table"

[dependencies]
entity_table = "0.1"
grid_2d = { version = "0.14", features = ["serialize"] }
serde = { version = "1.0", features = ["serde_derive"] }
