[package]
name = "spatial_table"
description = "Bi-directional association between entities and 2D grid locations"
version = "0.4.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/spatial-table.git"
repository = "https://github.com/gridbugs/spatial-table.git"
documentation = "https://docs.rs/spatial_table"

[features]
serialize = ["serde", "entity_table/serialize", "grid_2d/serialize"]

[dependencies]
entity_table = "0.2"
grid_2d = "0.15"
serde = { version = "1.0", features = ["serde_derive"], optional = true }
